--- a/web-app/src/main/resources/templates/stock.html
+++ b/web-app/src/main/resources/templates/stock.html
@@ -748,6 +748,7 @@
                 <button type="button" class="button button-primary" id="create-vehicle-btn">Створити машину</button>
                 <input type="text" id="vehicles-search-input" class="vehicles-search-input" placeholder="Пошук за номером машини, коментарем">
                 <button type="button" class="button button-secondary" id="vehicles-open-filters-btn">Фільтри</button>
+                <button type="button" class="excel-export" id="export-excel-vehicles-products">Excel</button>
             </div>
         </div>
         
